# plotbridge

./: .gitignore  LICENSE  MANIFEST.in  Pipfile  README.rst  requirements.txt  setup.cfg  setup.py
docs/: Makefile  api.rst  conf.py  contributing.rst  examples.rst  index.rst  install.rst  make.bat  requirements.txt
examples/gnuplot_basic1/: basic1.py
examples/gnuplot_basic1/expected_output/: Test_IV.gnuplot  gnuplot.interactive.py.out  trace_9acc8cff00ad438a84757b9d2be6d919.bytes  trace_f521b15922a84e60bacaa4797c30567c.bytes
examples/gnuplot_basic2/: basic2.py
examples/gnuplot_basic2/expected_output/: Test_IV.gnuplot  gnuplot.interactive.py.out  output-inc.eps  output.tex  pdflatex.out  trace_6273bdb94ce84a94966e7aad1ce9e2ec.bytes  trace_a7881b26dd664696b2104c76d29d8f3d.bytes
examples/gnuplot_curve_in_3d/: curve_in_3d.py
examples/gnuplot_curve_in_3d/expected_output/: gnuplot.interactive.py.out  spirals.gnuplot  trace_181090db1b38467eaf89133b71ac6119.bytes  trace_1a56e544f8d645bf9ce328116a3e9d1c.bytes
examples/gnuplot_heatmap/: heatmap.py
examples/gnuplot_heatmap/expected_output/: Transmission_vs_f_and_B.gnuplot  gnuplot.interactive.py.out  (+56 more)
examples/gnuplot_histogram/: histogram.py
examples/gnuplot_minimal/: minimal.py
examples/gnuplot_with_direction/: with_direction.py
plotbridge/: __init__.py  _metadata.py  plot.py
plotbridge/common_helper_scripts/: gnuplot.interactive.py
plotbridge/template_fragments/: gnuplot_footer.template_fragment  gnuplot_header.template_fragment
plotbridge/util/: convert_bytes_to_txt.py
test/: test_examples.py
(+25 files in other folders)
