[metadata]
name = plotbridge
version = 1.0.4
author = Joonas Govenius
description = A template-based bridge between Python and your plot engine
long_description = file: README.rst, LICENSE
long_description_content_type = text/x-rst
license = MIT
license_files = LICENSE
url = https://plotbridge.readthedocs.io/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = plotbridge
python_requires = >=3.8
install_requires =
    jinja2
    numpy
    scipy

[options.package_data]
plotbridge =
    template_fragments/*.template_fragment
    default_templates/*/*.py
    default_templates/*/*.preprocess
    default_templates/*/*.template
    default_templates/*/*.cfg
    common_helper_scripts/*.py
